--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <body>
     <div id="app">
-      <div class="commands" id="commandbar">
+      <div class="commands" id="commandsbar">
         <button name="bold">
           <i class="fas fa-bold"></i>
         </button>
