Solve format command errors now system detect correctly command buttons and apply each forma: bold, underline and italic

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
     <div id="app">
       <div class="commands" id="commandsbar">
         <button name="bold">
-          <i class="fas fa-bold"></i>
+          <i name="bold" class="fas fa-bold"></i>
         </button>
         <button name="italic">
-          <i class="fas fa-italic"></i>
+          <i name="italic" class="fas fa-italic"></i>
         </button>
         <button name="underline">
-          <i class="fas fa-underline"></i>
+          <i name="underline" class="fas fa-underline"></i>
         </button>
-        <button name="underline">
-          <i class="fas fa-link"></i>
+        <button name="link">
+          <i name="link" class="fas fa-link"></i>
         </button>
       </div>
       <br />
